--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -54,4 +56,9 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.37'
     implementation 'com.google.dagger:dagger-android:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.35'
+
+    // Kotlin
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 }
