--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
     implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
