--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 31
 
@@ -20,7 +23,11 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "API", "\"https://www.metaweather.com\""
+        }
         release {
+            buildConfigField "String", "API", "\"https://www.metaweather.com\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -42,15 +49,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
 
-    //retrofit
+    // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //dagger 2
     implementation 'com.google.dagger:dagger:2.37'
@@ -65,4 +74,16 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.7'
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    implementation "com.google.dagger:dagger:2.37"
+    implementation "com.google.dagger:dagger-android:2.35.1"
+    implementation "com.google.dagger:dagger-android-support:2.35.1"
+    kapt "com.google.dagger:dagger-compiler:2.37"
+    kapt "com.google.dagger:dagger-android-processor:2.35"
 }
