--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,10 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -66,6 +66,11 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.37'
     implementation 'com.google.dagger:dagger-android:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.35'
+    implementation "com.google.dagger:dagger:2.37"
+    implementation "com.google.dagger:dagger-android:2.35.1"
+    implementation "com.google.dagger:dagger-android-support:2.35.1"
+    kapt "com.google.dagger:dagger-compiler:2.37"
+    kapt "com.google.dagger:dagger-android-processor:2.35"
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
@@ -80,10 +85,4 @@ dependencies {
 
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
-
-    implementation "com.google.dagger:dagger:2.37"
-    implementation "com.google.dagger:dagger-android:2.35.1"
-    implementation "com.google.dagger:dagger-android-support:2.35.1"
-    kapt "com.google.dagger:dagger-compiler:2.37"
-    kapt "com.google.dagger:dagger-android-processor:2.35"
 }
