--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //coroutines
+    //coroutines & Flow
+    def lifecycle_version = "2.2.0"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
