--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id "dagger.hilt.android.plugin"
 }
-
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 31
@@ -63,16 +62,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //dagger 2
-    implementation 'com.google.dagger:dagger:2.37'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.37'
-    implementation 'com.google.dagger:dagger-android:2.35.1'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.35'
-    implementation "com.google.dagger:dagger:2.37"
-    implementation "com.google.dagger:dagger-android:2.35.1"
-    implementation "com.google.dagger:dagger-android-support:2.35.1"
-    kapt "com.google.dagger:dagger-compiler:2.37"
-    kapt "com.google.dagger:dagger-android-processor:2.35"
+    //Hilt
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
