--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id "dagger.hilt.android.plugin"
+    id 'com.squareup.anvil' version "2.4.0"
 }
 
 android {
@@ -62,9 +62,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //Hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    //Dagger2
+    implementation 'com.google.dagger:dagger:2.41'
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
