--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     //Dagger2
     implementation 'com.google.dagger:dagger:2.41'
+    kapt 'com.google.dagger:dagger-compiler:2.41'
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
